--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
 		"@fastify/cors": "^8.3.0",
 		"@fastify/env": "^4.2.0",
 		"@fastify/jwt": "^7.2.1",
+		"@fastify/multipart": "^9.0.3",
 		"@fastify/redis": "^6.1.1",
-		"@fastify/sensible": "^5.3.0",
-		"@fastify/swagger": "^8.10.0",
-		"@fastify/swagger-ui": "^1.9.3",
+		"@fastify/sensible": "^6.0.3",
+		"@fastify/swagger": "^9.5.1",
+		"@fastify/swagger-ui": "^5.2.3",
 		"@prisma/client": "^5.3.1",
 		"bcrypt": "^5.1.1",
 		"dotenv": "^16.3.1",
-		"fastify": "^4.23.2",
-		"fastify-plugin": "^4.5.1",
+		"fastify": "^5.4.0",
+		"fastify-plugin": "^5.0.1",
 		"fastify-zod": "^1.4.0",
 		"zod": "^3.22.2"
 	},
